ajustes para acriacao do gerenciador de rotas

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "author": "@wenderDS",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "cors": "^2.8.5"
   },
   "dependencies": {
     "express": "^4.17.1"
