--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
   },
   "author": "@wenderDS",
   "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^2.0.2",
-    "cors": "^2.8.5"
-  },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "knex": "^0.20.13",
+    "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
