--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "knex": "^0.20.13",
+    "password-hash": "^1.2.2",
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
